fix: overflow

--- a/src/components/CustomModal/CustomModal.module.css
+++ b/src/components/CustomModal/CustomModal.module.css
@@ -32,6 +32,8 @@
     opacity: 1;
     display: flex;
     align-items: center;
+    overflow-y: auto !important;
+
     /* transition: all 600ms linear; */
   }
   
